Overscroll behavior added to prevent pull to refresh on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    overscroll-behavior:none;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
     background-color: #f5f5f5;
     color: #333;
     overscroll-behavior-y: contain;
+    overscroll-behavior:none;
 }
 
 h1 {
